# nevelio

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  findings.json  report.html
.github/workflows/: ci.yml  security-scan.yml
crates/cli/: Cargo.toml
crates/cli/locales/: en.yml  es.yml  fr.yml
crates/cli/src/: ai_suggestions.rs  args.rs  commands.rs  config.rs  legal.rs  locale.rs  main.rs  output.rs  tui.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  http_client.rs  lib.rs  module_trait.rs  session.rs  types.rs
crates/modules/access-control/: Cargo.toml
crates/modules/access-control/src/: lib.rs
crates/modules/auth/: Cargo.toml
crates/modules/auth/src/: lib.rs
crates/modules/business-logic/: Cargo.toml
crates/modules/business-logic/src/: lib.rs
crates/modules/graphql/: Cargo.toml
crates/modules/graphql/src/: lib.rs
crates/modules/infra/: Cargo.toml
crates/modules/infra/src/: lib.rs
crates/modules/injection/: Cargo.toml
crates/modules/injection/src/: lib.rs
crates/recon/: Cargo.toml
crates/recon/src/: crawler.rs  discovery.rs  headers.rs  lib.rs  openapi.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: html_reporter.rs  json_reporter.rs  junit_reporter.rs  lib.rs  markdown_reporter.rs  report_types.rs  sarif_reporter.rs
crates/reporting/templates/: report.css  report.html  report.js
docs/: hardware-security-extensions.md  index.html  tutorial.md
payloads/: idor.yaml  jwt.yaml  sqli.yaml
