[package]
name    = "nevelio-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace       = true
reqwest.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
uuid.workspace        = true
chrono.workspace      = true
async-trait.workspace = true
