[package]
name    = "nevelio-module-auth"
version.workspace = true
edition.workspace = true

[dependencies]
nevelio-core           = { path = "../../core" }
async-trait.workspace  = true
anyhow.workspace       = true
tracing.workspace      = true
tokio.workspace        = true
reqwest.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
serde_yaml.workspace   = true
jsonwebtoken.workspace = true
base64.workspace       = true
