[package]
name    = "nevelio-module-business-logic"
version.workspace = true
edition.workspace = true

[dependencies]
nevelio-core          = { path = "../../core" }
async-trait.workspace = true
anyhow.workspace      = true
tracing.workspace     = true
tokio.workspace       = true
reqwest.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
