[package]
name    = "nevelio-module-graphql"
version.workspace = true
edition.workspace = true

[dependencies]
nevelio-core         = { path = "../../core" }
async-trait.workspace = true
anyhow.workspace      = true
tracing.workspace     = true
tokio.workspace       = true
reqwest.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
