[package]
name    = "nevelio-module-infra"
version.workspace = true
edition.workspace = true

[dependencies]
nevelio-core          = { path = "../../core" }
async-trait.workspace = true
anyhow.workspace      = true
tracing.workspace     = true
tokio.workspace       = true
reqwest.workspace     = true
